Apply correct links on auto dark mode

--- a/_src/css/_themes.scss
+++ b/_src/css/_themes.scss
@@ -5,15 +5,17 @@
   --light-bg-color: #{$gainsboro};
   --image-bg-color: #{$whisper};
   --switcher-bg-color: #{$darken-gainsboro};
-  --is-hidden: none;
-  --is-shown: inline-block;
   --switcher-position: translateX(6px);
   --switcher-opacity-active: 1;
   --switcher-opacity-inactive: .8;
   @if $bool {
+    --is-hidden: none;
+    --is-shown: inline-block;
     --no-click-active: none;
     --no-click-inactive: all;
   } @else {
+    --is-hidden: inline-block;
+    --is-shown: none;
     --no-click-active: all;
     --no-click-inactive: none;
   }
@@ -26,15 +28,17 @@
   --light-bg-color: #{$mine};
   --image-bg-color: #{$mine};
   --switcher-bg-color: #{$mine};
-  --is-hidden: inline-block;
-  --is-shown: none;
   --switcher-position: translateX(37px);
   --switcher-opacity-active: .8;
   --switcher-opacity-inactive: 1;
   @if $bool {
+    --is-hidden: inline-block;
+    --is-shown: none;
     --no-click-active: all;
     --no-click-inactive: none;
   } @else {
+    --is-hidden: none;
+    --is-shown: inline-block;
     --no-click-active: none;
     --no-click-inactive: all;
   }
